<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meetings.MeetingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_meetings_card_view_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_meetings_card_view_filter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_double_pm"
                android:layout_marginTop="@dimen/size_default_pm"
                android:layout_marginEnd="@dimen/size_double_pm"
                android:layout_marginBottom="@dimen/size_default_pm"
                android:drawableStart="@drawable/ic_filter_24dp"
                android:drawablePadding="@dimen/size_double_pm"
                android:paddingStart="@dimen/size_double_pm"
                android:paddingTop="@dimen/size_double_pm"
                android:paddingEnd="@dimen/size_double_pm"
                android:text="@string/filter_date_or_venue"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:textColor="@color/colorAccent" />

            <ImageButton
                android:id="@+id/fragment_meetings_card_view_filter_expand_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:contentDescription="@string/expand_icon"
                android:padding="@dimen/size_default_pm"
                android:src="@drawable/ic_expand_more_24dp"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meetings_card_view_filter_venue_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_double_pm"
                android:layout_marginTop="@dimen/size_default_pm"
                android:layout_marginEnd="@dimen/size_double_pm"
                android:layout_marginBottom="@dimen/size_default_pm"
                android:hint="@string/filter_venue"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_venue_24dp"
                    android:drawableEnd="@drawable/ic_clear_24dp"
                    android:drawablePadding="@dimen/size_double_pm"
                    android:maxLength="25" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meetings_card_view_filter_begin_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_double_pm"
                android:layout_marginTop="@dimen/size_default_pm"
                android:layout_marginEnd="@dimen/size_double_pm"
                android:layout_marginBottom="@dimen/size_default_pm"
                android:hint="@string/filter_begin_date"
                android:visibility="gone"
                app:helperText="dd/mm/yy or empty">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date_time_24dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                    android:drawablePadding="@dimen/size_double_pm"
                    android:inputType="datetime"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meetings_card_view_filter_end_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_double_pm"
                android:layout_marginTop="@dimen/size_default_pm"
                android:layout_marginEnd="@dimen/size_double_pm"
                android:layout_marginBottom="@dimen/size_default_pm"
                android:hint="@string/filter_end_date"
                android:visibility="gone"
                app:helperText="dd/mm/yy or empty">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date_time_24dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_24dp"
                    android:drawablePadding="@dimen/size_double_pm"
                    android:inputType="datetime"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_meetings_card_view_filter_apply_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/size_double_pm"
                android:text="@string/apply_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_title"
                android:visibility="gone"
                app:cornerRadius="0dp" />

            <ImageButton
                android:id="@+id/fragment_meetings_card_view_filter_collapse_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:contentDescription="@string/expand_icon"
                android:padding="@dimen/size_double_pm"
                android:src="@drawable/ic_expand_less_24dp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_meetings_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_meetings_card_view_filter" />
</RelativeLayout>