...
        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.meeting_creation.MeetingCreationFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meeting_creation_topic_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_double_pm"
                android:hint="Topic"
                app:helperText="required">
...
                    android:drawableStart="@drawable/ic_topic_24dp"
                    android:drawablePadding="@dimen/size_default_pm"
                    android:maxLength="35" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_meeting_creation_venue_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_meeting_creation_topic_text_input"
                android:layout_margin="@dimen/size_double_pm"
                android:hint="Venue"
...
