<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meeting_creation_dialog_toolbar_save_item"
        android:title="@string/add_participants_dialog_save_item"
        app:showAsAction="ifRoom" />
</menu>